<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <ImageView
        android:id="@+id/iconIv"
        android:src="@drawable/logo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iconIv"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:text="Welcome to the Book App!"
        android:textColor="@color/black"
        android:textSize="16sp"/>

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Log In"
        android:textColor="@color/white"
        android:layout_above="@id/signBtn"
        android:background="@drawable/shape_button"
        android:layout_marginBottom="10dp"/>

    <Button
        android:id="@+id/signBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/shape_button"
        android:text="Sign Up"
        android:textColor="@color/white" />




</RelativeLayout>